Final Changes after implimenting Friend and Group Changes , DB Connection pooling also working fine.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,6 +64,12 @@ body {
 }
 
 @media (min-width: 768px){
+	
+  #curUsers,#newUsers{
+    overflow-y: auto;
+    height:45%;
+  }
+  
   #newsfeed {
     overflow-y: auto; 
     height:90%;
