--- a/views/friendslist.ejs
+++ b/views/friendslist.ejs
@@ -81,13 +81,20 @@
                                  </div>
                                  <div  class="row" id="myfriendlistFrndpage" ng-show="!myfriendslist.error">
                                     <div class="col-md-6" ng-repeat="friend in myfriendslist | filter : temp">
+                                        <form name="navToFriendDetailPage{{friend.ROW_ID}}" id="navToFriendDetailPage{{friend.ROW_ID}}" action="/navToFriendDetailPage" method="get" novalidate="">
+			                            <input type="hidden" name="friendid" id="friendid" ng-model="friendid"  value="{{friend.ROW_ID}}">
+			                            </form>
                                        <div class="row row-eq-height">
                                           <div class="col-md-2">
+                                             <a ng-click="navToFriendDetailPage(friend)" style="color: black;">
                                              <img class="img-rounded img-responsive" ng-src="{{friend.IMAGE_URL}}">
+                                             </a>
                                           </div>
                                           <div class="col-md-10">
                                              <h3 class="text-left">
+                                                <a ng-click="navToFriendDetailPage(friend)" style="color: black;">
                                                 {{friend.FIRST_NAME}} {{friend.LAST_NAME}}
+                                                </a>
                                              </h3>
                                                <div class="dropdown text-left">
                                                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" style="padding: 1px 1px;background-color:#3B5998; color: #E8F3F0;"><i class="fa fa-star"></i>&nbsp;&nbsp;Friends
@@ -112,6 +119,9 @@
                                            <img class="img-thumbnail img-responsive" ng-src="{{friend.IMAGE_URL}}">
                                          </div>
                                          <div class="col-md-10">
+			                          	<form name="navToGroupDetailPage{{group.ROW_ID}}" id="navToGroupDetailPage{{group.ROW_ID}}" action="/navToGroupDetailPage" method="get" novalidate="">
+			                            <input type="hidden" name="groupid" id="groupid" ng-model="groupid"  value="{{group.ROW_ID}}">
+			                            </form>
                                            <h3 class="text-left">{{friend.FIRST_NAME}} {{friend.LAST_NAME}}</h3>
                                            <p class="text-left">Email : {{friend.EMAIL_ADDR}}</p>
                                          </div>
