--- a/views/groupdetails.ejs
+++ b/views/groupdetails.ejs
@@ -1,26 +1,24 @@
 <html>
-  
-  <head>
-    <title>friend's circle</title>
-    <link rel="icon" href="/images/favicon.ico">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.js"></script>
-<!--     <script src="https://code.angularjs.org/1.3.6/angular-messages.js"></script>
-    <script src="https://code.angularjs.org/1.3.6/angular-route.js"></script> -->
-    <script type="text/javascript" src="/js/libJS.js"></script>
-    <script type="text/javascript" src="/js/groupJS.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
-    rel="stylesheet" type="text/css">
-    <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
-    <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css"
-    rel="stylesheet" type="text/css">
-  </head>
-  
-  <body ng-app="SocialMediaPrototypeGroup" ng-controller="GroupPageController" ng-init="user=<%= user %>;">
-     <div class="navbar navbar-fixed-top myBackground">
+   <head>
+      <title>friend's circle</title>
+      <link rel="icon" href="/images/favicon.ico">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+      <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+      <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.js"></script>
+      <!--     <script src="https://code.angularjs.org/1.3.6/angular-messages.js"></script>
+         <script src="https://code.angularjs.org/1.3.6/angular-route.js"></script> -->
+      <script type="text/javascript" src="/js/libJS.js"></script>
+      <script type="text/javascript" src="/js/groupDetailsJS.js"></script>
+      <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
+         rel="stylesheet" type="text/css">
+      <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
+      <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css"
+         rel="stylesheet" type="text/css">
+   </head>
+   <body ng-app="SocialMediaPrototypeGroupDetailsApp" ng-controller="GroupDetailsPageController" ng-init="user=<%= user %>; getGroupsInfo(); getCurrentMembers(); getNonMembers();">
+      <div class="navbar navbar-fixed-top myBackground">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
@@ -44,7 +42,7 @@
             <li class="active">
               <form class="navbar-form navbar-right" role="search" name="logoutForm"
               ng-submit="logoutUesr()" action="/logout" method="post" novalidate="">
-                <button type="submit" ng-disabled="logoutForm.$invalid" class="btn btn-primary">Logout</button>
+                <button type="button" class="btn btn-primary" ng-click="logout()">Logout</button>
               </form>
             </li>
           </ul>
@@ -68,7 +66,9 @@
               <li class="media">
                 <a class="pull-left" href="/userdetails"><img class="media-object" ng-src="{{user.IMAGE_URL}}" height="64" width="64"></a>
                 <div class="media-body">
-                  <h4 class="media-heading">{{user.FIRST_NAME}} {{user.LAST_NAME}}</h4>
+                  <h4 class="media-heading">
+                    <a href="/userdetails" style="color:black;">{{user.FIRST_NAME}} {{user.LAST_NAME}}</a>
+                  </h4>
                   <p></p>
                 </div>
               </li>
@@ -77,55 +77,105 @@
               <li class="media">
                 <a class="pull-left" href="/friendslist"><img class="media-object" src="/images/friend_list_icon.png" height="54" width="54"></a>
                 <div class="media-body">
-                  <h4 class="media-heading">Friends</h4>
+                  <h4 class="media-heading">
+                    <a href="/friendslist" style="color:black;">Friends</a>
+                  </h4>
                 </div>
               </li>
               <li class="media">
-                <a class="pull-left" href="/groups"><img class="media-object" src="http://previews.123rf.com/images/fffranz/fffranz1312/fffranz131200046/24441438-abstract-schematic-illustration-of-groups-and-behavior-therapy-Stock-Vector.jpg" height="54" width="54"></a>
+                <a class="pull-left" href="/groups"><img class="media-object" src="/images/Group_Icon.jpg" height="54" width="54"></a>
                 <div class="media-body">
-                  <h4 class="media-heading">Groups</h4>
+                  <h4 class="media-heading">
+                    <a href="/groups" style="color:black;">Groups</a>
+                  </h4>
                 </div>
               </li>
             </ul>
           </div>
           <div class="col-md-9">
-          <div class="row">
-          <div class="jumbotron">
-			    <div class="container">
-			        <h1>Group Name</h1>
-			        <h3>Group Information</h3>
-			    </div>
-			</div>
-          </div>
-          <div class="row">
-          <h2>Group Members</h2>
-          </div>
-          <div class="row">
-          <ul class="media-list">
-                      <li class="media">
-                        <a class="pull-left" href="#"><img class="media-object" src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" height="64" width="64"></a>
-                        <div class="media-body">
-                          <h4 class="media-heading">Media heading</h4>
-                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
-                            ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at,
-                            tempus viverra turpis.</p>
-                        </div>
-                      </li>
-                      <li class="media">
-                        <a class="pull-left" href="#"><img class="media-object" src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" height="64" width="64"></a>
-                        <div class="media-body">
-                          <h4 class="media-heading">Media heading</h4>
-                          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque
-                            ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at,
-                            tempus viverra turpis.</p>
-                        </div>
-                      </li>
-                    </ul>
-          </div>
+            <div class="row">
+              <div class="jumbotron">
+                <div class="container">
+                  <h2><b>{{group.GROUP_NAME}}</b></h2>
+                  <h3>{{group.GROUP_INFO}}</h3>
+                  <form name="deleteGroup{{group.ROW_ID}}" id="deleteGroup{{group.ROW_ID}}" action="/deleteGroup" method="post" novalidate="">
+                            <input type="hidden" name="groupid" id="groupid" ng-model="groupid"  value="{{group.ROW_ID}}">
+                            <button class="btn btn-primary"
+                  ng-click="deleteGroup(group)" type="submit" style="padding: 1px 1px;background-color:#3B5998; color: #E8F3F0;">
+                    <b>Delete Group</b>
+                  </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+            <div class="row" style="padding-bottom: 15px;padding-left: 15px;">
+              <div class="col-md-12">
+              </div>
+              <div class="col-md-12">
+                <div class="row" ng-show="group.error">
+                  <div class="alert alert-danger" ng-show="group.error">
+                    <strong>Error! {{group.errorMessage}}</strong>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <h3>
+                  <img style="min-height:30px;height:30px;" alt="" src="/images/browsegroups.png">&nbsp;&nbsp;Group Members</h3>
+              </div>
+              <div class="col-md-6">
+                <h3>
+                  <img style="min-height:30px;height:30px;" alt="" src="/images/my-groups-icon.png">&nbsp;&nbsp;Add Members</h3>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="alert alert-danger" ng-show="curUsers.error">
+                  <strong>Error! {{curUsers.errorMessage}}</strong>
+                </div>
+                <ul class="media-list" id="curUsers">
+                  <li class="media" ng-repeat="cuser in curUsers">
+                    <a class="pull-left" href="" ng-click="removeUserfromGroup(cuser)"><img class="media-object" ng-src="{{cuser.IMAGE_URL}}" height="54" width="54"></a>
+                    <div class="media-body">
+                      <h4 class="media-heading">
+                        <b>{{cuser.FIRST_NAME}} {{cuser.LAST_NAME}}</b>&nbsp;&nbsp;
+                        <button class="btn btn-primary" ng-click="removeUserfromGroup(cuser)"
+                        style="padding: 1px 1px;background-color:#3B5998; color: #E8F3F0;">
+                          <b>Remove User</b>
+                        </button>
+                      </h4>
+                      <p>{{cuser.EMAIL_ADDR}}</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-6">
+                <div class="alert alert-danger" ng-show="newUsers.error">
+                  <strong>Error! {{newUsers.errorMessage}}</strong>
+                </div>
+                <ul class="media-list" id="newUsers">
+                  <li class="media" ng-repeat="nuser in newUsers">
+                      <a class="pull-left" ng-click="addUserToGroup(nuser)"><img class="media-object" ng-src="{{nuser.IMAGE_URL}}" height="54" width="54"></a>
+                      <div class="media-body">
+                        <h4 class="media-heading">
+                          <b>
+                            <a class="pull-left" ng-click="addUserToGroup(nuser)" style="color: black;">{{nuser.FIRST_NAME}} {{nuser.LAST_NAME}}</a>
+                          </b>&nbsp;&nbsp;
+                          <button class="btn btn-primary" ng-click="addUserToGroup(nuser)"
+                          style="padding: 1px 1px;background-color:#3B5998;">
+                            <b>Add User</b>
+                          </button>
+                        </h4>
+                        <p>{{nuser.EMAIL_ADDR}}</p>
+                      </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </body>
-
+   </body>
 </html>
